--- a/_examples/experimental/http2/index.html
+++ b/_examples/experimental/http2/index.html
@@ -34,6 +34,8 @@
                 const centrifuge = new Centrifuge(transports, {
                     // Workaround to reliably use HTTP/2 Extended CONNECT in Chrome upon reconnections
                     // (when no HTTP/2 connection in pool exists Chrome selects HTTP/1.1 for WebSocket).
+                    // So we first make some HTTP request to ensure HTTP/2 connection is established and
+                    // can be reused for WebSocket.
                     getData: function () {
                         return fetch('/ping', {method: 'GET'}).then(function() {
                             return null;
@@ -41,7 +43,10 @@
                     }
                 });
 
+                const start = performance.now();
                 centrifuge.on('connected', function(ctx){
+                    const total = performance.now() - start;
+                    console.log(`\nTotal: ${total.toFixed(0)}ms`);
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(ctx.data));
                     input.removeAttribute('disabled');
                 });
