--- a/_examples/experimental/http2/index.html
+++ b/_examples/experimental/http2/index.html
@@ -21,10 +21,10 @@
                 const container = document.getElementById('messages');
 
                 const transports = [
-                    {
-                        transport: 'websocket',
-                        endpoint: `wss://${window.location.host}/connection/websocket`
-                    },
+                    // {
+                    //     transport: 'websocket',
+                    //     endpoint: `wss://${window.location.host}/connection/websocket`
+                    // },
                     {
                         transport: 'http_stream',
                         endpoint: `https://${window.location.host}/connection/http_stream`
